force-app/main/default/objects/Work_Order_Material__c/Work_Order_Material__c.object-meta.xml
<CustomObject>
    <label>Work Order Material</label>
    <nameField>
        <label>Work Order Materials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>