force-app/main/default/objects/Work_Order_Material__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Work Order Materials</relationshipLabel>
    <relationshipName>Work_Order_Materials</relationshipName>
    <type>Lookup</type>
</CustomField>