force-app/main/default/objects/Work_Order_Material__c/validationRules/Check_Available_Material_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Available_Material_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>Required_Quantity__c &gt; Material__r.Stock_Quantity__c || Material__r.Stock_Quantity__c = null</errorConditionFormula>
    <errorDisplayField>Required_Quantity__c</errorDisplayField>
    <errorMessage>Material Stock Quantity is insufficient. Work Order Material cannot be saved.</errorMessage>
</ValidationRule>